DuPont DevSB/src/objects/Search_Criteria__c.object
<CustomObject>
    <description>The object is used for searching the hose products in the system.</description>
    <fields>
        <fullName>KV_Appropriate_Loop_Strength__c</fullName>
        <description>It is used in Kevlar Selector tool to display appropriate loop strength.</description>
        <label>Appropriate Loop Strength</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Comments__c</fullName>
        <description>Comments is used for search criteria in Kevlar Automotive Selector tool.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KV_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the customer info referenced as Account</description>
        <inlineHelpText>Name of the Automotive Hose Manufacturer.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search Criterias</relationshipLabel>
        <relationshipName>Search_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KV_Inner_Wall_Thickness_mm__c</fullName>
        <description>This field is used in search criteria for the Kevlar Automotive Selector Tool</description>
        <inlineHelpText>This is the thickness between the inside wall and the knit.</inlineHelpText>
        <label>Inner Wall Thickness (mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Internal_Diameter_mm__c</fullName>
        <description>Internal Diameter is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>This is the diameter inside the hose in mm.</inlineHelpText>
        <label>Internal Diameter (mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Knitting_Angle__c</fullName>
        <description>Knitting Angle is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>This is the angle of the knit like in the drawing in °.</inlineHelpText>
        <label>Knitting Angle (°)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_OEM_Country__c</fullName>
        <description>OEM Country is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>Country where the part will be used in final assembly in the car.</inlineHelpText>
        <label>OEM Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_OEM_Platform__c</fullName>
        <description>OEM Platform is used for search criteria in Kevlar automotive selector tool.</description>
        <label>OEM Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_OEM__c</fullName>
        <description>OEM (original equipment manufacturer) is used for search criteria in kevlar automotive selector tool.</description>
        <inlineHelpText>Name of the car manufacturer.</inlineHelpText>
        <label>OEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Operating_Pressure_Unit__c</fullName>
        <description>Operating Pressure Unit is used for search criteria in Kevlar Automotive Selector tool.</description>
        <label>Operating Pressure Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                    <default>true</default>
                    <label>Bar</label>
                </value>
                <value>
                    <fullName>PSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Operating_Pressure_Value__c</fullName>
        <description>Operating Pressure Value is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>This is the pressure that the hose will be exposed to under normal conditions (not the burst pressure). In case of multiple test profiles please use the highest pressure requirement of the specification.</inlineHelpText>
        <label>Operating Pressure Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Operating_Temperature__c</fullName>
        <description>Operating Temperature is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>If inside temperature is different from the outside temperature, we recommend to use the highest of the average temperature + 30%. In case the temperature does not appear in the drop box, please use the next higher available temperature.</inlineHelpText>
        <label>Operating Temperature (°C)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>220</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                    <isActive>false</isActive>
                    <label>47</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Stitch_Length_Unit__c</fullName>
        <description>Stitch Length Unit is used for search criteria in Kevlar Automotive Selector tool.</description>
        <inlineHelpText>If selected mm Distance in mm between 2 rows.
If selected Stitch/inch the number of knit rows per inch.</inlineHelpText>
        <label>Stitch Length Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                    <default>true</default>
                    <label>mm</label>
                </value>
                <value>
                    <fullName>Per Inch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Stitch_Length_Value__c</fullName>
        <description>Stitch Length Value is used for search criteria in Kevlar Automotive Selector tool.</description>
        <label>Stitch Length Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Search Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KV_Customer__c</columns>
        <columns>KV_Operating_Temperature__c</columns>
        <columns>KV_Operating_Pressure_Unit__c</columns>
        <columns>KV_Operating_Pressure_Value__c</columns>
        <columns>KV_Internal_Diameter_mm__c</columns>
        <columns>KV_Inner_Wall_Thickness_mm__c</columns>
        <columns>KV_Knitting_Angle__c</columns>
        <columns>KV_Stitch_Length_Unit__c</columns>
        <columns>KV_Stitch_Length_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRT-{0000}</displayFormat>
        <label>Search Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>InnerWall_thickness_range</fullName>
        <active>true</active>
        <description>InnerWall Thickness minimum value can be 0.5 and maximum 4</description>
        <errorConditionFormula>KV_Inner_Wall_Thickness_mm__c &lt;  $Setup.DPSKevlarCustomSetting__c.KV_Inner_Wall_Thickness_Lower_Limit__c || 
 KV_Inner_Wall_Thickness_mm__c &gt;  $Setup.DPSKevlarCustomSetting__c.KV_Inner_Wall_Thickness_Upper_Limit__c</errorConditionFormula>
        <errorMessage>Inner Wall Thickness range should be between 0.5 mm to 4 mm.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inner_wall_thickness_neg_value_errmsg</fullName>
        <active>true</active>
        <description>Inner Wall Thickness value can&apos;t be negative</description>
        <errorConditionFormula>KV_Inner_Wall_Thickness_mm__c  &lt; 0</errorConditionFormula>
        <errorMessage>Inner Wall Thickness value can&apos;t be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Internal_Diam_negative_value_errmsg</fullName>
        <active>true</active>
        <description>Internal Diameter value can&apos;t be negative</description>
        <errorConditionFormula>KV_Internal_Diameter_mm__c  &lt; 0</errorConditionFormula>
        <errorMessage>Internal Diameter value can&apos;t be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Knitting_angle_min_70_max_90</fullName>
        <active>true</active>
        <description>Knitting angle minimum value can be 70 and maximum 90</description>
        <errorConditionFormula>KV_Knitting_Angle__c &lt;  $Setup.DPSKevlarCustomSetting__c.KV_Knitting_angle_lower_limit__c ||  
KV_Knitting_Angle__c &gt;  $Setup.DPSKevlarCustomSetting__c.KV_Knitting_angle_upper_limit__c</errorConditionFormula>
        <errorMessage>Knitting angle range should be between 70 to 90.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stitch_Length_nagative_value_errmsg</fullName>
        <active>true</active>
        <description>Stitch Length value can&apos;t be negative</description>
        <errorConditionFormula>KV_Stitch_Length_Value__c  &lt; 0</errorConditionFormula>
        <errorMessage>Stitch Length value can&apos;t be negative</errorMessage>
    </validationRules>
</CustomObject>